--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,7 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+    //Image uri view - 19-10-2022
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+
 }
